# robotic_manipulator_simulation

./: readme.md  rebuild.sh  test.py  testMove.py
cad/GP7 (Solidworks 2020)/: Part224.SLDPRT  Part250.SLDPRT
cad/GP7 (Solidworks 2020)/EndEffector/: FingerJoint.SLDASM  fingerMiddleLink.SLDASM  fingerTip.SLDASM
cad/GP7 (Solidworks 2020)/GP7 components/: AirInlet.SLDPRT  BASE.SLDPRT  BAXIS_HOUSING.SLDPRT  BAXIS_HOUSING2.SLDPRT  BAXIS_HOUSING3.SLDPRT  BAXIS_WRISTBASE.SLDPRT  COVER1.SLDPRT  C_BASE.SLDPRT  C_BASE_ASSEMBLY_ASM.SLDASM  GP7_BASE.sldasm  GP7_B_AXIS.sldasm  GP7_L_AXIS.sldasm  (+23 more)
gp7_robot/: CMakeLists.txt  gp7_robot_w.urdf  package.xml
gp7_robot/launch/: display.launch  gazebo.launch
gp7_robot/meshes/: EE.STL  base_link.STL  finger1_link.STL  finger2_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL
gp7_robot/urdf/: gp7_robot.csv  gp7_robot.urdf
install/: local_setup.sh  setup.sh
log/: latest_build
src/gazebo_sim/: CMakeLists.txt  package.xml
src/gp7_robot/: CMakeLists.txt  model.config  package.xml  setup.py
src/gp7_robot/config/: gp7_controllers.yaml  joint_names_AEP_Robot.yaml
src/gp7_robot/config/rviz/: gp7_robot.rviz
src/gp7_robot/gp7_robot/: gp7_kinematics.py  trajectory_planner.py
src/gp7_robot/gp7_robot/scripts/: pick_place_controller.py  test_kinematics.py
src/gp7_robot/launch/: display_gazebo.launch.py  display_rviz2.launch.py  task_execute.launch.py
src/gp7_robot/meshes/: EE.STL  finger1_link.STL  finger2_link.STL  link1.STL  link2.STL  link3.STL  link5.STL
src/gp7_robot/urdf/: gp7_robot.csv  gp7_robot.urdf
(+55 files in other folders)
